force-app/main/default/objects/ssot__AssessmentTaskIndicatorDefinition__dlm/fields/ssot__AssessmentTaskDefinitionId__c.field-meta.xml
<CustomField>
    <fullName>ssot__AssessmentTaskDefinitionId__c</fullName>
    <label>Assessment Task Definition</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AssessmentTaskDefinitionId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>