force-app/main/default/objects/ssot__AssessmentTaskIndicatorDefinition__dlm/fields/ssot__HasScore__c.field-meta.xml
<CustomField>
    <fullName>ssot__HasScore__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Score</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>HasScore</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>