force-app/main/default/objects/ssot__AssessmentTaskIndicatorDefinition__dlm/fields/ssot__IsMandatory__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsMandatory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Mandatory</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsMandatory</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>