force-app/main/default/objects/ssot__AssessmentTaskIndicatorDefinition__dlm/fields/ssot__IsProductRelevant__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsProductRelevant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Product Relevant</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsProductRelevant</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>