force-app/main/default/objects/ssot__AssessmentTaskIndicatorDefinition__dlm/fields/ssot__MeasureLevelId__c.field-meta.xml
<CustomField>
    <fullName>ssot__MeasureLevelId__c</fullName>
    <label>Measure Level</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>MeasureLevelId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>